[project]
name = "ferryschedule"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.15"
dependencies = [
    "gtfs-realtime-bindings>=1.0.0",
    "nyct-gtfs>=1.3.0",
    "pillow>=12.0.0",
    "protobuf>=4.25.0",
    "python-dateutil>=2.9.0",
    "pytz>=2025.2",
    "requests>=2.31.0",
]
